plugins {
    id 'java'
}

group 'matt.bot.discord'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.3'
    compile group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.66'
    compile 'net.dv8tion:JDA:4.2.0_208'
    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
    compile group: 'org.springframework', name: 'spring-web', version: '4.0.9.RELEASE'
    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.34.0'


    testCompile group: 'junit', name: 'junit', version: '4.12'
}

jar {
    manifest {
        attributes (
                "Main-Class": "Main"
        )
    }

    from {
        configurations.runtimeClasspath.findAll { !it.path.endsWith(".pom") }.collect { it.isDirectory() ? it : zipTree(it) }
    }
}